<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notification" />
    <item
        android:id="@+id/fab_test"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_history" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />


</menu>